--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,25 @@
 <!doctype html>
 
 <html>
+
 <head>
-	<title>HCI Project Portfolio</title>	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114593561-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-114593561-1');
+	</script>
+
+	<title>HCI Project Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/introHCI.css" rel="stylesheet">
-  
+
 </head>
 
 <body>
@@ -20,21 +31,24 @@
 
 		<h4>Projects</h4>
 		{{#each projects}}
-			<div class="project" id="{{id}}">
-				<div class="thumbnail">
-					<a href="/project/{{id}}">
-						<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
-						<h4>{{title}}</h4>
-					</a>
-					<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
-					<div class="details"></div>
+		<div class="project" id="{{id}}">
+			<div class="thumbnail">
+				<a href="/project/{{id}}">
+					<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
+					<h4>{{title}}</h4>
+				</a>
+				<div class="likeCtr">
+					<button class="btn btn-default likeBtn" onclick="track()">Like</button>
 				</div>
+				<div class="details"></div>
 			</div>
+		</div>
 		{{/each}}
 
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/introHCI.js"></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/introHCI.js"></script>
 </body>
+
 </html>
